--- a/common/tasks/service_en&start.yaml
+++ b/common/tasks/service_en&start.yaml
@@ -3,11 +3,11 @@
     src: "{{component}}.service"
     dest: /etc/systemd/system/
   when: 
-    - {{component}} != "redis"
-    - {{component}} != "mongodb"
-    - {{component}} != "mysql"
-    - {{component}} != "rabbitmq"
-    - {{component}} != "web"
+    - "{{component}}" != "redis"
+    - "{{component}}" != "mongodb"
+    - "{{component}}" != "mysql"
+    - "{{component}}" != "rabbitmq"
+    - "{{component}}" != "web"
 - name: reload, enable and start "{{component}}" service
   ansible.builtin.systemd_service:
     state: started
