--- a/mysql/tasks/main.yaml
+++ b/mysql/tasks/main.yaml
@@ -8,9 +8,9 @@
     ansible.builtin.yum:
       name: mysql-community-server
       state: present
-  - name: start and enable service
-    ansible.builtin.import_role:
-      name: common
-      tasks_from: service_en&start
+  - name: start and enable mysql service
+    ansible.builtin.service:
+      name: mysqld
+      state: restarted
   - name: Set root password for mysql
     ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
