--- a/mysql/tasks/main.yaml
+++ b/mysql/tasks/main.yaml
@@ -11,6 +11,7 @@
   - name: start and enable mysql service
     ansible.builtin.service:
       name: mysqld
+      enabled: yes
       state: restarted
   - name: Set root password for mysql
     ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
