--- a/web/vars/main.yaml
+++ b/web/vars/main.yaml
@@ -1,5 +1,5 @@
-CATALOGUE_HOST: catalogue.joindevops.online
-USER_HOST: user.joindevops.online
-SHIPPING_HOST: shipping.joindevops.online
-CART_HOST: cart.joindevops.online
-PAYMENT_HOST: payment.joindevops.online
+CATALOGUE_HOST: catalogue.nareshdevops.online
+USER_HOST: user.nareshdevops.online
+SHIPPING_HOST: shipping.nareshdevops.online
+CART_HOST: cart.nareshdevops.online
+PAYMENT_HOST: payment.nareshdevops.online
